--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ env="dev"
 debug=true
 AutoMigrateDb=true
 
+kafkaBootstrapServers="host.docker.internal:9094"
+kafkaConsumerGroupId=codepix
+kafkaTransactionTopic="transactions"
+kafkaTransactionConfirmationTopic="transaction_confirmation"
